results/classifier/108/other/1772166
other: 0.644
performance: 0.612
PID: 0.593
graphic: 0.559
semantic: 0.554
device: 0.508
socket: 0.364
vnc: 0.252
permissions: 0.234
network: 0.174
boot: 0.132
files: 0.116
debug: 0.113
KVM: 0.032

qemu 2.4.1: dereferencing pointer to incomplete type ‘struct ucontext’

Trying to compile qemu release 2.4.1

Getting compile error 

user-exec.c: In function ‘cpu_resume_from_signal’:
user-exec.c:72:37: error: dereferencing pointer to incomplete type ‘struct ucontext’
         sigprocmask(SIG_SETMASK, &uc->uc_sigmask, NULL);
                                     ^~
user-exec.c: In function ‘cpu_arm_signal_handler’:
user-exec.c:214:41: error: dereferencing pointer to incomplete type ‘struct ucontext’

2.4.1 is a very old release of QEMU. I would recommend moving to a more recent release.


I need this for raspberry pi emulation and the most recent doesn't work as you can see from my other bug post.

QEMU 2.4 is from 2015, and we didn't add raspi2 support until 2016. We've never supported the USB controller for the raspi boards. Perhaps you're using some other fork of QEMU? If so, better to talk to whoever's responsible for it.


v2.4 is not maintained anymore, so closing this as WONTFIX.

